refactor: Java 8 refactoring for compatibility docs: updated grading table